--- a/application.yml
+++ b/application.yml
@@ -6,7 +6,7 @@ spring:
     #name: SERVICE-PROVIDER
 
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/smbms?serverTimezone=UTC
     username: root
     password: ok
