--- a/application.yml
+++ b/application.yml
@@ -21,7 +21,7 @@ eureka:
 
 
 mybatis:
-  mapper-locations: classpath:mapping/*.xml
+  mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.zb.sp.entity
   configuration:
     auto-mapping-behavior: full
